up-date-project

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @import url("../../public/fonts/index.css"); */
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -18,7 +20,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  /* background: linear-gradient(
+ /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
